# hermes-infoflow

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  __init__.py  after-install.md  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  emoji-api.md  infoflow-bos.md  infoflow-file-delivery.md  infoflow-getuserinfo-api.md  infoflow-inbound-files.md  infoflow-message-format.md  infoflow-send-message-refactor-plan.md  logging.md  prompt-design.md
hermes_infoflow/: __init__.py  adapter.py  api.py  bot.py  coerce.py  config_editor.py  crypto.py  dashboard.py  deploy.py  file_delivery.py  file_to_url.py  identity.py  iflogging.py  iftools.py  inbound_files.py  itypes.py  llm_format.py  llm_judge.py  llm_tags.py  log_cleanup.py  logging.py  media.py  message_content.py  message_store.py  outbound.py  parser.py  paths.py  plugin.yaml  policy.py  prompt_rules.py  reactions.py  recall.py  recall_silence.py  send_service.py  sent_store.py  serverapi.py  sessiontracker.py  sessiontracker_terminal.py  settings.py  sse.py  (+6 more)
hermes_infoflow/static/sessiontracker/fonts/meslo/: README.md
scripts/: deploy.sh  normalize.sh  sync_readme_install_version.py  test_emoji_api.py  test_getuserinfo.py  test_prompts.py  test_prompts_results.json
scripts/lib/: deploy-common.sh  edit_hermes_config.py  edit_hermes_env.py
scripts/sim/: README.md  _env.py  _message_format_probe.py  probe_contract_edges.py  probe_group_formats.py  probe_group_links.py  probe_private_formats.py  probe_reply_counts.py  probe_reply_preview_edges.py  prompt_behavior_cases.json  prompt_behavior_glm.py  simulate_inbound_webhook.py  test_create_group.py  test_file_to_url_send_matrix.py  test_get_group_members.py  test_image_limit.py  test_prompt_behavior_glm.py  test_send_intent_matrix.py  test_send_via_adapter.py  test_send_via_serverapi.py  test_send_via_standalone.py
tests/: _aes_helpers.py  conftest.py  test_adapter.py  test_adapter_helpers.py  test_adapter_outbound_tracker.py  test_api.py  test_bot_message_store.py  test_bot_no_layer13.py  test_bot_no_reply_ops.py  test_bot_reaction.py  test_bot_refusal_filter.py  test_bot_sentinel.py  test_config_writer.py  test_create_group_tool.py  test_crypto.py  test_dashboard.py  test_deploy_layout.py  test_edit_hermes_env.py  test_file_delivery.py  test_group_members_tool.py  test_history_tool.py  test_inbound_files.py  test_llm_format.py  test_log_cleanup.py  test_media.py  test_message_content.py  test_message_store.py  test_outbound.py  test_parser.py  test_paths.py  test_policy.py  test_policy_templates.py  test_recall_silence.py  test_recall_tool_result.py  test_registration.py  test_reply_tool_media.py  test_send_message_tool.py  test_send_service.py  test_sent_store.py  test_serverapi_bos.py  (+7 more)
tests/fixtures/: infoflow_prompt_behavior_cases.json
tests/live/: test_prompt_behavior_glm.py
tools/hermes-infoflow-tools/: README.md  pyproject.toml
tools/hermes-infoflow-tools-npm/: README.md  package.json
tools/hermes-infoflow-tools/hermes_infoflow_tools/: __init__.py  cli.py  env_editor.py
