[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "hermes-infoflow"
version = "2026.5.26b1"
description = "Baidu Infoflow (如流) channel plugin for Hermes Agent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "chengbo05", email = "chengbo05@baidu.com" }]
keywords = [
    "hermes",
    "hermes-agent",
    "hermes-plugin",
    "infoflow",
    "baidu",
    "chatbot",
    "ai-agent",
    "enterprise-messaging",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Topic :: Communications :: Chat",
]
dependencies = [
    # Core Hermes deps are already required by hermes-agent itself. Pillow is
    # needed for outbound Infoflow image validation/compression. Pinned loosely.
    "cryptography>=3.4",
    "aiohttp>=3.8",
    "PyYAML>=6.0",
    "Pillow>=10",
]

# hermes-agent discovers plugins through this entry-point group.
# See hermes_cli/plugins.py: ENTRY_POINTS_GROUP = "hermes_agent.plugins".
# The key here MUST equal plugin.yaml's `name` and register(ctx)(name=...)
# so directory-style and entry-point-style installs deduplicate to one plugin.
[project.entry-points."hermes_agent.plugins"]
infoflow = "hermes_infoflow"

[project.scripts]
hermes-infoflow-deploy = "hermes_infoflow.deploy:main"
hermes-infoflow-normalize = "hermes_infoflow.deploy:main"

[project.urls]
Homepage = "https://github.com/chbo297/hermes-infoflow"
Issues   = "https://github.com/chbo297/hermes-infoflow/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["hermes_infoflow"]
# Ship metadata used by pip-style deploys. The package also carries
# hermes_infoflow/plugin.yaml; scripts are force-included below so
# hermes-infoflow-deploy can run the same deploy-common.sh as other paths.
include = [
    "plugin.yaml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel.force-include]
"scripts" = "hermes_infoflow/_deploy_scripts"

[tool.hatch.build.targets.sdist]
include = [
    "hermes_infoflow",
    "plugin.yaml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "after-install.md",
    "scripts",
]
exclude = [
    "tests",
    "tools",
    ".github",
    "**/__pycache__",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function-call-in-default-arg (we use sentinels intentionally)
]

[tool.ruff.lint.per-file-ignores]
# Late imports after optional hermes-agent / gateway shims (see adapter module docstring).
"hermes_infoflow/adapter.py" = ["E402"]
# deploy.py must clean sys.path before stdlib imports when executed directly
# from a flattened plugin dir.
"hermes_infoflow/deploy.py" = ["E402"]

[tool.pytest.ini_options]
addopts = [
    "-m",
    "not integration",
]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "integration: tests that exercise deploy scripts and subprocess layout",
]
